# gitlabci-to-githubactions-migration

./: AGENTS.md  README.md  pyproject.toml  quantum_potato_synthesizer.py  setup-github-auth.sh  temporal_banana_orchestrator.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
fastapi_sample_app/: main.py
tests/: test_main.py
