[tool.poetry]
name = "fastapi-sample-app"
version = "0.1.0"
description = ""
authors = ["Jose Ivan Vargas <jvargas@gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
httpcore = ">=1.0.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
